@@ -1,3 +1,12 @@
+2006-12-11 Emmanuel Dreyfus  <manu@netbsd.org>
+	* src/libipsec/{Makefile.am|libpfkey.h|pfkey.c}
+	  src/racoon/{backupsa.c|pfkey.c}: Bring back API and ABI backward
+	  compatibility with previous libipsec interface change. Bump 
+	  libipsec minor version. Remove ifdefs in struct pfkey_send_sa_args
+	  to avoid ABI compatibility lossage.
+	* src/libipsec/{libpfkey.h|pfkey.c} src/racoon/cfparse.y: add 
+	  capability flags to detect missing optional feature in libipsec
+
 2006-12-10 Emmanuel Dreyfus  <manu@netbsd.org>
 	From Joy Latten <latten@austin.ibm.com>
 	* src/racoon/Makefile.am
